Block Editor: Fix block placeholder notices alignment.

--- a/packages/block-editor/src/components/block-list/style.scss
+++ b/packages/block-editor/src/components/block-list/style.scss
@@ -62,7 +62,7 @@
 	 */
 
 	.components-placeholder .components-with-notices-ui {
-		margin: -10px 20px 12px 20px;
+		margin: -10px 0 12px 0;
 		width: calc(100% - 40px);
 	}
 
